# memex-kb

./: .beads-registry.yaml  .coverage  .gitignore  .kbconfig  .mcp.json  @AGENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  TUTORIAL.md  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl  last-touched
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.config/: wt.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml  docker-compose.yml  voidlabs.conf
.devcontainer/configs/: worktrunk-user-config.toml
.devcontainer/scripts/: post-create-project.sh  post-start-common.sh  post-start-project.sh
.github/workflows/: publish-kb.yml
.tickets/: m-0022.md  m-08c6.md  m-0b49.md  m-0f9f.md  m-18bd.md  m-1916.md  m-2ce2.md  m-2fb0.md  m-3439.md  m-4c9c.md  m-581f.md  m-5b1a.md  m-678d.md  m-6a8f.md  m-6e08.md  m-71f4.md  m-7752.md  m-7ad1.md  m-8390.md  m-87a0.md  m-90b9.md  m-9e71.md  m-b9c7.md  m-bae1.md  m-c33b.md  m-d3ef.md  m-d451.md  m-dac5.md  m-db09.md  m-e470.md  m-ed4d.md  m-f7be.md  m-f8d0.md  m-fbc5.md  mem-8lbg.md  mem-iodx.md  mem-p078.md  mem-spd6.md
.vl-mail/: messages.jsonl
commands/: kb-add.md  kb-quality.md  kb-search.md  kb-sync.md  memex-kb-add.md  memex-kb-quality.md  memex-kb-search.md
docs/: README.md  graph.html  graph.json  index.html  search-index.json
docs/assets/: style.css
docs/best-practices/: ai-slop-antipatterns.html
docs/devops/: voidlabs-cicd-automation.html  voidlabs-provisioning-workflow.html
docs/examples/: session-context-hook-example.py
docs/guides/: ai-integration.html  installation.html  mcp-setup.html  quick-start.html
docs/infrastructure/: ansible-inventory-split-guide.html  common-patterns.html  garage-s3-object-storage.html  hyperion-proxmox-boot-failure-postmortem.html  memex-knowledge-base.html  omarchy-vm-setup-on-proxmox-with-gpu-passthrough.html  proxmox-gpu-passthrough-on-amd-kernel-68-iommu-issue.html  proxmox-subscription-nag-removal.html  proxmox-vm-filesystem-recovery-with-fsck.html  sunshine-appsjson-presets-for-multi-device-resolution.html  sunshine-streaming-setup-on-omarchy-vm-with-nvidia-gpu-passthrough.html  virtiofs-limitations-and-troubleshooting.html  voidlabs-infrastructure-overview.html  voidlabs-networking-and-dns.html  voidlabs-storage-architecture.html
docs/projects/: cli-tool-path-lookup-behavior.html  concordance-datopt-import-patterns.html  dictaphone-app-ios-and-macos-voice-categorization-app.html  dictaphone-implementation-progress.html  dictaphone-inbox-pattern-feature-plan.html  dictaphone-phase-5-core-ui-implementation.html  dictaphone-phase-6-cloud-providers-implementation.html  dictaphone-phase-7-8-implementation.html  docviewer-deployment-architecture.html  docviewer-local-development-workflow.html  docviewer-naming-conventions.html  focusgroup-project.html  sightline-5ightline.html  test-beads-full-project.html  test-beads-single-issue.html  tg-scrape-social-media-astroturfing-analysis-project.html
docs/reference/: beads.html  cli.html  entry-format.html  session-log.html  templates.html
docs/tags/: 503-error.html  504-error.html  agent-mail.html  agent-tooling.html  agents.html  ai-agents.html  ai-integration.html  ai.html  amd.html  ansible.html  anthropic.html  antipatterns.html  api.html  apify.html  apps.json.html  architecture.html  ast.html  astroturfing.html  auto-organize.html  automation.html  aws-rekognition.html  bad-gateway.html  basics.html  beads.html  best-practices.html  boot-loop.html  bugs.html  caddy.html  cicd.html  claude-code.html  claude-desktop.html  cli.html  cloud.html  code-quality.html  code-review.html  codex.html  commands.html  compose.html  concordance.html  configuration.html  (+155 more)
docs/tooling/: beads-issue-tracker.html  (+5 more)
eval/: queries.json
hooks/: hooks.json  session-context.py  session-kb.sh  session-simple.sh
kb/: .kbconfig  _index.md
scripts/: perf-sanity.sh  run-mcp.sh  setup-remote.sh
tests/: conftest.py  test_agent_compact_json.py  test_api.py  test_backlinks_cache.py  test_caches.py  test_chroma_index.py  test_cli.py  test_cli_add.py  test_cli_append.py  test_cli_beads.py  test_cli_context_extended.py  test_cli_help.py  test_cli_history.py  test_cli_info.py  test_cli_init.py  test_cli_integration.py  test_cli_search_content.py  test_cli_search_flags.py  test_cli_status.py  test_cli_typo_suggestions.py  test_context.py  test_core.py  test_core_coverage_edges.py  test_core_edge_cases.py  test_directory_tools.py  test_embedding_cache.py  test_evaluation.py  test_evolution_queue.py  test_frontmatter.py  test_health_cache.py  test_hybrid_search.py  test_incremental_indexing.py  test_integration.py  test_links.py  test_listing_tools.py  test_logging.py  test_mcp.py  test_mcp_tools.py  test_memory_evolution.py  test_parsing.py  (+17 more)
(+226 files in other folders)
