[project]
name = "memex"
version = "0.1.0"
description = "Personal knowledge base with semantic search"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.1",
    "pydantic>=2.12.0",
    "whoosh-reloaded>=2.7.4",
    "chromadb>=0.5.0,<1.0.0",  # Cap for arm64 onnxruntime compatibility
    "sentence-transformers>=3.0.0",
    "python-frontmatter>=1.1.0",
    "watchdog>=4.0.0",
    "tiktoken>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "click>=8.1.0",
]

[project.scripts]
memex = "memex.server:main"
memex-web = "memex.webapp.api:main"
mx = "memex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
