[project]
name = "memex-kb"
version = "0.2.1"
description = "Personal knowledge base with semantic search"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies (required for all functionality)
    "pydantic>=2.12.0",
    "python-frontmatter>=1.1.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",  # For .kbconfig parsing
    "tiktoken>=0.5.0",  # For token counting
    "markdown-it-py>=3.0.0",  # For markdown rendering
    "jinja2>=3.1.0",  # For publisher templates
    # Ship with keyword search by default (lightweight).
    "whoosh-reloaded>=2.7.4",
]

[project.optional-dependencies]
# Semantic search extras (can pull heavyweight ML deps)
search = [
    "chromadb>=0.5.0,<1.0.0",  # Cap for arm64 onnxruntime compatibility
    "sentence-transformers>=3.0.0",
    "watchdog>=4.0.0",
    "anthropic>=0.40.0",  # For memory capture LLM calls
    "openai>=1.0.0",  # For memory evolution via OpenRouter
]
# Convenience alias for full installation
all = ["memex-kb[search]"]

[project.scripts]
mx = "memex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memex"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["__pycache__"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# Enable stricter rules that are off by default
division-by-zero = "error"              # Catch x / 0
possibly-unresolved-reference = "warn"  # Catch typos in conditional branches

# Promote warnings to errors for CI strictness
possibly-missing-attribute = "error"    # Was warning, catches real bugs

[tool.ty.terminal]
error-on-warning = true                 # Fail CI on warnings too

# Relax rules for tests (they often do weird things intentionally)
[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"
